infra/k8s/ai-recommendation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-recommendation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-recommendation
  template:
    metadata:
      labels:
        app: ai-recommendation
    spec:
      containers:
        - name: ai-recommendation
          image: takikb/ai-recommendation
          ports:
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: ai-recommendation-srv
spec:
  selector:
    app: ai-recommendation
  ports:
    - name: ai-recommendation
      protocol: TCP
      port: 8000
      targetPort: 8000
