infra/k8s/chat-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-redis
  template:
    metadata:
      labels:
        app: chat-redis
    spec:
      containers:
        - name: chat-redis
          image: redis:latest
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: chat-redis-svc
spec:
  selector:
    app: chat-redis
  ports:
    - name: chat-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
